# digitalnz-api-python

./: CHANGES  MANIFEST.in  README.rst  pyproject.toml  tox.ini
src/dnz_client/: client.py
tests/: test_client.py
